[package]
name = "endorphin"
description = "Key-Value based in-memory cache library which supports Custom Expiration Policies"
license-file = "LICENSE.txt"
readme = "README.md"
version = "0.1.8"
edition = "2018"
categories = ["caching"]
keywords = ["cache", "ttl", "hashmap", "tti", "caching"]
repository = "https://github.com/ArtBlnd/endorphin"


[dependencies]
crossbeam = "0.8.1"
hashbrown = { version = "0.11.2", features = ["raw"] }
once_cell = "1.8.0"
parking_lot = "0.11.2"
slotmap = "1.0.6"